--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -9,8 +9,8 @@
     "# load libraries\n",
     "from loader import Loader\n",
     "from sklearn import neural_network\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.model_selection import cross_val_score\n",
     "import numpy as np"
    ]
   },
@@ -32,58 +32,40 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1000 1000\n240\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "# Load and prepare data set\n",
-    "dataset = Loader()\n",
-    "# dataset.pca(n_comp=25)\n",
-    "X, y = dataset.getWholeTrainSet(pca=False, shuffle=False, flat=True)\n",
-    "X = X / 6   # normalize data set\n",
+    "# Optional: add data augmentation using rotation\n",
+    "def augment_data_rotation(dataset, intensity=0.1):\n",
+    "    X_aug = []\n",
+    "    y_aug = []\n",
+    "    for im_class in range(10):\n",
+    "        for im_index in range(100):\n",
+    "            X_aug.append(dataset.getImage(im_class, im_index, aug=True, set=\"train\", flat=True) / 255)\n",
+    "            y_aug.append(im_class)\n",
     "\n",
-    "print(len(X), len(y))\n",
-    "print(len(X[0]))"
+    "    X_aug = np.asarray(X_aug)\n",
+    "    y_aug = np.asarray(y_aug)\n",
+    "\n",
+    "    return X_aug, y_aug"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1000 1000\n240\n"
-     ]
-    }
-   ],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# Optional: add data augmentation\n",
-    "X_aug = []\n",
-    "y_aug = []\n",
-    "for im_class in range(10):\n",
-    "    for im_index in range(100):\n",
-    "        X_aug.append(dataset.getImage(im_class, im_index, aug=True, set=\"train\", flat=True) / 255)\n",
-    "        y_aug.append(im_class)\n",
+    "# Load and prepare data set\n",
+    "dataset = Loader()\n",
+    "# dataset.pca(n_comp=240)\n",
+    "X_original, y_original = dataset.getWholeTrainSet(pca=False, shuffle=False, flat=True)\n",
+    "X_original = X_original / 6 # normalize images\n",
     "\n",
-    "X_aug = np.asarray(X_aug)\n",
-    "y_aug = np.asarray(y_aug)\n",
-    "# X = np.concatenate((X, X_aug), axis=0)\n",
-    "# y = np.concatenate((y, y_aug), axis=0)\n",
-    "\n",
-    "print(len(X_aug), len(y_aug))\n",
-    "print(len(X_aug[0]))\n"
+    "# X_test, y_test =  dataset.getWholeTestSet(pca=False, shuffle=False, flat=True)\n",
+    "# X_test = X_test / 6 # normalize images"
    ]
   },
   {
@@ -92,125 +74,177 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# shuffle dataset\n",
-    "order = np.arange(len(X))\n",
-    "np.random.shuffle(order)\n",
-    "X = X[order]\n",
-    "y = y[order]\n",
-    "X_aug = X_aug[order]\n",
-    "y_aug = y_aug[order]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[89.  95.5 95.  95.  95. ] 93.9\n"
-     ]
-    }
-   ],
-   "source": [
     "# cross validation\n",
-    "k = 5\n",
-    "fold_len = int(len(X)/k)\n",
+    "k = 10\n",
+    "fold_len = int(len(X_original)/k)\n",
     "final = []\n",
+    "final_train = []\n",
     "\n",
-    "for fold in range(k):\n",
-    "    # construct training set\n",
-    "    if fold == 0:\n",
-    "        X_train = X[(fold+1)*fold_len:1000]\n",
-    "        y_train = y[(fold+1)*fold_len:1000]\n",
-    "    elif fold == k-1:\n",
-    "        X_train = X[0:fold*fold_len]\n",
-    "        y_train = y[0:fold*fold_len]\n",
-    "    else:\n",
-    "        X_train = np.concatenate((X[0:fold*fold_len], X[(fold+1)*fold_len:1000]))\n",
-    "        y_train = np.concatenate((y[0:fold*fold_len], y[(fold+1)*fold_len:1000]))\n",
+    "for run in range(10):\n",
+    "    # shuffle dataset to get new folds\n",
+    "    order = np.arange(len(X_original))\n",
+    "    np.random.shuffle(order)\n",
+    "    X = X_original[order]\n",
+    "    y = y_original[order]\n",
     "\n",
-    "    # # construct training set with augmented data\n",
-    "    # if fold == 0:\n",
-    "    #     X_train = np.concatenate((X[(fold+1)*fold_len:1000], X_aug[(fold+1)*fold_len:1000]))\n",
-    "    #     y_train = np.concatenate((y[(fold+1)*fold_len:1000], y_aug[(fold+1)*fold_len:1000]))\n",
-    "    # elif fold == k-1:\n",
-    "    #     X_train = np.concatenate((X[0:fold*fold_len], X_aug[0:fold*fold_len]))\n",
-    "    #     y_train = np.concatenate((y[0:fold*fold_len], y_aug[0:fold*fold_len]))\n",
-    "    # else:\n",
-    "    #     X_train = np.concatenate((X[0:fold*fold_len], X[(fold+1)*fold_len:1000], X_aug[0:fold*fold_len], X_aug[(fold+1)*fold_len:1000]))\n",
-    "    #     y_train = np.concatenate((y[0:fold*fold_len], y[(fold+1)*fold_len:1000], y_aug[0:fold*fold_len], y_aug[(fold+1)*fold_len:1000]))\n",
+    "    for fold in range(k):\n",
+    "        # construct training set\n",
+    "        if fold == 0:\n",
+    "            X_train = X[(fold+1)*fold_len:1000]\n",
+    "            y_train = y[(fold+1)*fold_len:1000]\n",
+    "        elif fold == k-1:\n",
+    "            X_train = X[0:fold*fold_len]\n",
+    "            y_train = y[0:fold*fold_len]\n",
+    "        else:\n",
+    "            X_train = np.concatenate((X[0:fold*fold_len], X[(fold+1)*fold_len:1000]))\n",
+    "            y_train = np.concatenate((y[0:fold*fold_len], y[(fold+1)*fold_len:1000]))\n",
     "\n",
-    "    # construct validation set\n",
-    "    X_val = X[fold*fold_len:(fold+1)*fold_len]\n",
-    "    y_val = y[fold*fold_len:(fold+1)*fold_len]\n",
+    "        # construct validation set\n",
+    "        X_val = X[fold*fold_len:(fold+1)*fold_len]\n",
+    "        y_val = y[fold*fold_len:(fold+1)*fold_len]\n",
     "\n",
-    "    # train and evaluate model\n",
-    "    model = neural_network.MLPClassifier(hidden_layer_sizes=(10)) \n",
-    "    model.fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_val)\n",
-    "    val_err = evaluate(y_val, y_pred)\n",
-    "    final.append(val_err)\n",
+    "        # train and evaluate model\n",
+    "        model = neural_network.MLPClassifier(hidden_layer_sizes=(250, 100)) \n",
+    "        model.fit(X_train, y_train)\n",
     "\n",
-    "print((1-np.array(final))*100, 100*(1-np.mean(final)))"
+    "        # training error\n",
+    "        y_pred_train = model.predict(X_train)\n",
+    "        train_err = evaluate(y_train, y_pred_train)\n",
+    "        final_train.append(train_err)\n",
+    "\n",
+    "        # validation error\n",
+    "        y_pred = model.predict(X_val)\n",
+    "        val_err = evaluate(y_val, y_pred)\n",
+    "        final.append(val_err)\n",
+    "\n",
+    "    print(\"run\", run, \":\", 100*(1-np.mean(final)), np.var((1-np.array(final)) * 100))\n",
+    "\n",
+    "# print((1-np.array(final))*100)\n",
+    "print(\"result:\")\n",
+    "print(100*(1-np.mean(final)), np.var((1-np.array(final)) * 100))\n",
+    "print(\"training\", 100*(1-np.mean(final_train)), np.var((1-np.array(final_train)) * 100))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # apply model\n",
-    "# model = neural_network.MLPClassifier(hidden_layer_sizes=(250)) \n",
-    "# scores = cross_val_score(model, X, y, cv=5)\n",
-    "# print(scores)\n",
-    "# print(np.mean(scores))\n",
-    "# print(np.var(scores))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Optional: add data augmentation\n",
-    "# X_aug = np.empty(5, 200)\n",
-    "# y_aug = np.empty(5, 200)\n",
-    "# X = np.empty(5, 200)\n",
-    "# y = np.empty(5, 200)\n",
-    "# for im_class in range(10):\n",
-    "#     for fold in range(5):\n",
-    "#         for im_index in range(20):\n",
-    "#             X_aug[fold].append(dataset.getImage(im_class, 20*fold+im_index, aug=True, set=\"train\", flat=True) / 255)\n",
-    "#             y_aug[fold].append(im_class)\n",
+    "# # cross validation with data augmentation\n",
+    "# k = 10\n",
+    "# fold_len = int(len(X_original)/k)\n",
+    "# final = []\n",
+    "# final_train = []\n",
     "\n",
-    "#             X[fold].append(dataset.getImage(im_class, 20*fold+im_index, aug=False, set=\"train\", flat=True) / 6)\n",
-    "#             y[fold].append(im_class)\n",
+    "# for run in range(10):\n",
+    "#     X_aug, y_aug = augment_data_rotation(dataset)\n",
     "\n",
-    "#             if im_class == 1:\n",
-    "#                 print(20*fold+im_index)\n",
+    "#     # shuffle dataset\n",
+    "#     order = np.arange(len(X_original))\n",
+    "#     np.random.shuffle(order)\n",
+    "#     X = X_original[order]\n",
+    "#     y = y_original[order]\n",
+    "#     X_aug = X_aug[order]\n",
+    "#     y_aug = y_aug[order]\n",
     "\n",
-    "# X = np.concatenate((X, X_aug), axis=0)\n",
-    "# y = np.concatenate((y, y_aug), axis=0)\n",
+    "#     # print(\"size dataset:\", len(X), len(X_aug))\n",
     "\n",
-    "# print(len(X), len(y))\n",
-    "# print(len(X[0]))"
+    "#     for fold in range(k):\n",
+    "#         # construct training set with augmented data\n",
+    "#         if fold == 0:\n",
+    "#             X_train = np.concatenate((X[(fold+1)*fold_len:1000], X_aug[(fold+1)*fold_len:1000]))\n",
+    "#             y_train = np.concatenate((y[(fold+1)*fold_len:1000], y_aug[(fold+1)*fold_len:1000]))\n",
+    "#         elif fold == k-1:\n",
+    "#             X_train = np.concatenate((X[0:fold*fold_len], X_aug[0:fold*fold_len]))\n",
+    "#             y_train = np.concatenate((y[0:fold*fold_len], y_aug[0:fold*fold_len]))\n",
+    "#         else:\n",
+    "#             X_train = np.concatenate((X[0:fold*fold_len], X[(fold+1)*fold_len:1000], X_aug[0:fold*fold_len], X_aug[(fold+1)*fold_len:1000]))\n",
+    "#             y_train = np.concatenate((y[0:fold*fold_len], y[(fold+1)*fold_len:1000], y_aug[0:fold*fold_len], y_aug[(fold+1)*fold_len:1000]))\n",
+    "\n",
+    "#         # construct validation set\n",
+    "#         X_val = X[fold*fold_len:(fold+1)*fold_len]\n",
+    "#         y_val = y[fold*fold_len:(fold+1)*fold_len]\n",
+    "\n",
+    "#         # print(len(X_train), len(X_val))\n",
+    "\n",
+    "#         # train and evaluate model\n",
+    "#         model = neural_network.MLPClassifier(hidden_layer_sizes=(250, 100))\n",
+    "#         model.fit(X_train, y_train)\n",
+    "\n",
+    "#         # training error\n",
+    "#         y_pred_train = model.predict(X_train)\n",
+    "#         train_err = evaluate(y_train, y_pred_train)\n",
+    "#         final_train.append(train_err)\n",
+    "\n",
+    "#         y_pred = model.predict(X_val)\n",
+    "#         val_err = evaluate(y_val, y_pred)\n",
+    "#         final.append(val_err)\n",
+    "\n",
+    "#     print(\"run\", run, \":\", 100*(1-np.mean(final)), np.var((1-np.array(final)) * 100), \"         size dataset:\", len(X), len(X_aug))\n",
+    "\n",
+    "# print(\"\\nresult:\")\n",
+    "# print(100*(1-np.mean(final)), np.var((1-np.array(final)) * 100))\n",
+    "# print(\"training\", 100*(1-np.mean(final_train)), np.var((1-np.array(final_train)) * 100))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "run 0 : 96.0 0.0\n",
+      "run 1 : 96.05 0.002499999999999716\n",
+      "run 2 : 96.13333333333334 0.015555555555555366\n",
+      "run 3 : 96.05 0.03249999999999986\n",
+      "run 4 : 96.12 0.04559999999999925\n",
+      "run 5 : 96.18333333333334 0.05805555555555535\n",
+      "run 6 : 96.17142857142858 0.05061224489795906\n",
+      "run 7 : 96.125 0.059374999999999824\n",
+      "run 8 : 96.14444444444445 0.055802469135802335\n",
+      "run 9 : 96.19 0.0688999999999997\n",
+      "result:\n",
+      "testing 96.19 0.0688999999999997\n",
+      "training 100.0 0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# How many epochs? ?????????????\n",
-    "# What is the training error?\n",
+    "# # final experiment on the test set\n",
+    "# k = 10\n",
+    "# fold_len = int(len(X_original)/k)\n",
+    "# final = []\n",
+    "# final_train = []\n",
     "\n",
-    "# To do: set up own cross-validation, only data augmentation for the training"
+    "# for run in range(10):\n",
+    "#     X_aug, y_aug = augment_data_rotation(dataset)\n",
+    "#     X_train = np.concatenate((X_original, X_aug))\n",
+    "#     y_train = np.concatenate((y_original, y_aug))\n",
+    "\n",
+    "#     # train and evaluate model\n",
+    "#     model = neural_network.MLPClassifier(hidden_layer_sizes=(250, 100)) \n",
+    "#     model.fit(X_train, y_train)\n",
+    "\n",
+    "#     # training error\n",
+    "#     y_pred_train = model.predict(X_train)\n",
+    "#     train_err = evaluate(y_train, y_pred_train)\n",
+    "#     final_train.append(train_err)\n",
+    "\n",
+    "#     # testing error\n",
+    "#     y_pred = model.predict(X_test)\n",
+    "#     test_err = evaluate(y_test, y_pred)\n",
+    "#     final.append(test_err)\n",
+    "\n",
+    "#     print(\"run\", run, \":\", 100*(1-np.mean(final)), np.var((1-np.array(final)) * 100))\n",
+    "\n",
+    "# # print((1-np.array(final))*100)\n",
+    "# print(\"result:\")\n",
+    "# print(\"testing\", 100*(1-np.mean(final)), np.var((1-np.array(final)) * 100))\n",
+    "# print(\"training\", 100*(1-np.mean(final_train)), np.var((1-np.array(final_train)) * 100))"
    ]
   }
  ],
